# Event-Horizon-Py

./: LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml
event_horizon_py/: __init__.py
src/event_horizon_py/: __init__.py  dataclasses.py  recording.py
stubs/: brotli.pyi
tests/: test_dataclasses.py  test_recording.py
tests/data/: sample_recording.evh
