[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-horizon-py"
description = "My event-horizon library"
readme = "README.md"
license = { text = "MIT" }
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  {name = "Shloon", email = "shlomo.shmouely@gmail.com"}
]
keywords = ["event-horizon","data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "brotli~=1.1",
]

[project.optional-dependencies]
pandas=["pandas~=2.1","pandas-stubs~=2.1"]
numpy=["numpy~=1.26"]
all=["event-horizon-py[pandas,numpy]"]
dev=["event-horizon-py[all]","ruff~=0.1.9","black~=23.12.1","mypy~=1.8.0","pytest"]

[project.urls]
"Homepage" = "https://github.com/shloon/event-horizon-py"

[tool.ruff]
ignore = ["E501"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
